# facer

./: .gitignore  README.md  collect data.py  collect_data.py  cv.py  face_locations.py  know_face_encodings.npy  know_face_names.npy  main.py  nocom.py  pyproject.toml  requirements.txt  video.py
data/: know_face_encodings.npy  know_face_names.npy
locator/: cv.py
main module/: collect data.py  know_face_encodings.npy  know_face_names.npy  main.py  test build.py
speed test/: facerecognition locator.py  opencv locator.py
ukr/: collect_data.py  main.py
