[project]
name = "facer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dlib",
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "loguru>=0.7.3",
    "opencv-python>=4.11.0.86",
    "setuptools>=79.0.1",
]

[tool.uv.sources]
dlib = { url = "https://github.com/z-mahmud22/Dlib_Windows_Python3.x/raw/main/dlib-19.22.99-cp39-cp39-win_amd64.whl" }
